package domain.credit_card

case class CreditCardNumber(value: String)
