package domain.user;

public enum Course {
    Free, Toll
}
