package domain.user.register.error

case class UserRegistrationInvalidMessage(value: String)
