package domain.user.register.error;

public enum UserRegistrationInvalidReason {
    NonAdult, AlreadyRegistered, InvalidCreditCard;
}
